@@ -34,8 +34,12 @@ class PlaylistsProxyModel : public ProxyModel
 
 public:
     PlaylistsProxyModel(QObject *parent = 0);
+    void setFilterGenre(const QString &genre);
     bool filterAcceptsRow(int sourceRow, const QModelIndex &sourceParent) const;
     bool lessThan(const QModelIndex &left, const QModelIndex &right) const;
+
+private:
+    QString filterGenre;
 };
 
 #endif
