@@ -25,6 +25,7 @@
 18. Disable playback buttons depending upon size of play queue.
 19. When sending track change notification, also include cover (if we have one)
 20. Optionally fade-out track when stopping.
+21. Add genre filtering to playlists page.
 
 0.3.0
 -----
